force-app/main/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Alliance_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To populate campaign on Primary Campaign Source field on related opportunity.</description>
        <label>Alliance Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Objectives__c</fullName>
        <inlineHelpText>Define purpose of campaign</inlineHelpText>
        <label>Campaign Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branding &amp; positioning</fullName>
                </value>
                <value>
                    <fullName>Client engagement</fullName>
                </value>
                <value>
                    <fullName>Cross-sell or up-sell</fullName>
                </value>
                <value>
                    <fullName>Lead generation</fullName>
                </value>
                <value>
                    <fullName>Product announcement</fullName>
                </value>
                <value>
                    <fullName>Thought leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Add a date here for ensuring the Campaign list is kept to only open campaigns</description>
        <inlineHelpText>Select the date to deactivate this campaign here which will remove it from the Campaign List</inlineHelpText>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <inlineHelpText>The fiscal quarter the campaign started (for reporting)</inlineHelpText>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>The month the campaign started (for reporting)</inlineHelpText>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <inlineHelpText>Define the promotion type</inlineHelpText>
        <label>Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Animation/Video</fullName>
                </value>
                <value>
                    <fullName>Blog post</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Infographic</fullName>
                </value>
                <value>
                    <fullName>Interactive Infographic</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Podcast</fullName>
                </value>
                <value>
                    <fullName>PowerPoint slide deck</fullName>
                </value>
                <value>
                    <fullName>Promotional Content</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Top Tips document</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Webinar PP slide deck</fullName>
                </value>
                <value>
                    <fullName>Webinar recording</fullName>
                </value>
                <value>
                    <fullName>White paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Asset__c</fullName>
        <description>This field is used to capture previous value of Asset(Offer__c) field</description>
        <label>Old Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Tactic__c</fullName>
        <description>This field is used to capture previous value of Tactic (Type) field</description>
        <label>Old Tactic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>The year the campaign started (for reporting)</inlineHelpText>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>